# domain-types-linter

./: pyproject.toml
domain_types_linter/: linter_types.py  linter_types_examples.py
src/domain_type_linter/: __init__.py
tests/: test_cli.py
